Frist version with Spring Session and Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,22 @@ spring.jpa.hibernate.ddl-auto=update
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+## Cache Configuration ##
+# spring.cache.type=redis
+# spring.redis.host=localhost
+# spring.redis.port=6379
+
+## Session Configuration ##
+# Session store type.
+spring.session.store-type=jdbc
+# Session timeout. If a duration suffix is not specified, seconds are used.
+# server.servlet.session.timeout= 
+# Database schema initialization mode.
+    #If we specify as "never", then we need to create session tables in manually executing the script. 
+    #In production, we don't enable the auto-create/update.
+spring.session.jdbc.initialize-schema=always 
+# Path to the SQL file to use to initialize the database schema.
+spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-@@platform@@.sql
+# Name of the database table used to store sessions.
+spring.session.jdbc.table-name=SPRING_SESSION
